<resources>
    <string name="app_name">fleetingtime</string>
    <string name="nearby">附近</string>
    <string name="album">相册</string>
    <string name="circle">圈子</string>

    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_incorrect_username">用户不存在</string>
    <string name="error_incorrect_username_or_password">用户名或密码错误</string>
    <string name="error_empty_field_required">这一项是必需的</string>
    <string name="error_in_register">用户已存在</string>
    <string name="error_of_server">服务器错误</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>

    <string name="create_album">创建相册</string>
    <string name="album_name">相册名称</string>
    <string name="album_private">隐私－公开相册</string>
    <string name="album_syn">同步至</string>
    <string name="album_wifi">仅wifi同步数据</string>
    <string name="create_ok">确 认</string>
    <string name="create_cancel">取 消</string>
    <string name="title_activity_album_detail">AlbumDetailActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_album__detail_">Album_Detail_Activity</string>

    <string name="photo_description">还没有照片描述</string>
    <string name="photo_add_location">添加位置</string>
    <string name="photo_time">2016-05-21</string>

</resources>
